# Lucid-Immersion

./: .gitignore  LICENSE  README.md
.kiro/specs/backend-api/: VOICE_INPUT_FEATURE.md  design.md  requirements.md  tasks.md
UnityStuff/: DISPLAY_SETUP.md  Unity-PassthroughCameraApiSamples-main.slnx  UnityStuff.slnx
UnityStuff/Assets/: HeadlessConverter.cs  NewScript.asmdef  WavUtility.cs
UnityStuff/Assets/AfferenceUnitySDK/: link.xml
UnityStuff/Assets/Haptics/: BubblePop.haptic  DoubleTap_66msPulse_ 200msOverall.haptic  SingleStrongPulseButtonPress.ahap  (+2 more)
UnityStuff/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
backend/: .dockerignore  .env.example  .env.yaml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_FORMAT_UPDATE.md  README.md  TESTING_STATUS.md  WORKFLOW_STRUCTURE.md  deploy.cmd  deploy.sh  llm.py  pyproject.toml  requirements.txt  state.py  test_ask_endpoint.py  test_with_image.py  workflow.py
backend/app/: main.py
backend/app/routes/: ask.py  assist.py
backend/app/utils/: audio_validation.py  image_processing.py  session.py  speech_to_text.py  validation.py
backend/contexts/: camera-setup.json  gym-session.json  japanese-homework-session.json  meta-quest-3-analysis.json  restaurant-burger.json  test-food-burger-session.json  test-gym-biceps-session.json  test-japanese-homework-session.json
backend/test_images/: .gitkeep  README.md
backend/tests/: test_ask_endpoint.py  test_assist_endpoint.py  test_audio_validation.py  test_llm.py  test_main.py  test_speech_to_text.py
moonlake/: README.md
(+50 files in other folders)
